2003-01-18  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03651] Debian bug #176981
	* file.c (checkRedirection): added
		(loadGeneralFile): check redirection
				t_buf only is created when it is NULL
				remove_space

2003-01-18  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03647] expandName() and expandPath()
	* etc.c (openSecretFile): use expandPath
		(expandName): rewrite
		(file_to_url): use expandPath
	* file.c (_doFileCopy): use expandPath
		(doFileSave): use expandPath
	* indep.c (expandPath): rewrite
	* linein.c (inputLineHistSearch): use expandPath
		(next_dcompl): use expandPath
		(doComplete): use expandPath
	* local.c (set_cgi_environ): rewrite
	* mailcap.c (loadMailcap): use expandPath
	* main.c (svBuf): use expandPath
		(addDownloadList): use expandPath
	* rc.c (init_rc): use expandPath
		(rcFile): rewrite
		(auxbinFile): use expandPath
		(libFile): use expandPath
		(etcFile): use expandPath
		(helpFile): use expandPath
	* url.c (loadMimeTypes): use expandPath
		(loadURIMethods): use expandPath

2003-01-18  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03646] setup child process, local CGI
	* etc.c (reset_signals): static
				don't ignore SIGUSR1
		(close_all_fds_except): static
				DEV_NULL_PATH
		(setup_child): added
		(myExec): rewrite
		(mySystem): rewrite
	* file.c (readHeader): check image_source
		(loadGeneralFile): check image_source
		(doExternal): use setup_child
		(_doFileCopy): use setup_child
		(doFileSave): use setup_child
		(uncompress_stream): check image_source
				use setup_child
	* image.c (getCharSize): no need stderr redirect
		(openImgdisplay): use setup_child
		(loadImage): use setup_child
		(getImageSize): no need stderr redirect
	* local.c (writeLocalCookie): check Local_cookie_file
		(localcgi_popen_rw): added
		(localcgi_popen_r): deleted
		(localcgi_post): rewrite
		(localcgi_get): deleted
	* proto.h (localcgi_get): defined by localcgi_post
		(reset_signals): deleted