@@ -1,3 +1,9 @@
+2003-01-18  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* [w3m-dev 03652] Re: Debian bug #176981
+	* file.c (checkHeader): always remove_space
+		(loadGeneralFile): no need remove_space
+
 2003-01-18  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 03651] Debian bug #176981
@@ -6586,4 +6592,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.688 2003/01/17 17:13:02 ukai Exp $
+$Id: ChangeLog,v 1.689 2003/01/17 17:29:58 ukai Exp $
